map white space underneath reponsive sizing fixes in weatherly.css

--- a/src/Components/Weatherly/Terminal.css
+++ b/src/Components/Weatherly/Terminal.css
@@ -224,7 +224,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .w-terminal {
-    width: 60vw;
+    width: 88vw;
     height: 30vh;
     right: 50%;
     transform: translateX(50%);
